--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ chardet==3.0.4
 colorama==0.4.4
 cryptography==3.1.1
 decorator==4.4.2
-decouple==0.0.7
 defusedxml==0.6.0
 Django==3.1.2
 django-allauth==0.43.0
@@ -26,6 +25,7 @@ django-svg-icons==0.1.2
 django-upload-validator==1.1.5
 djangorestframework==3.12.1
 future==0.18.2
+gunicorn==20.0.4
 huepy==1.2.1
 idna==2.10
 imageio==2.9.0
@@ -48,6 +48,7 @@ PyJWT==1.7.1
 pyparsing==2.4.7
 PySocks==1.7.1
 pytest==6.1.2
+python-decouple==3.3
 python-magic-bin==0.4.14
 python3-openid==3.2.0
 pytz==2020.1
