--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,10 @@ django-quill-editor==0.1.16
 django-subdomains==2.1.0
 django-svg-icons==0.1.2
 django-upload-validator==1.1.5
+djangoflutterwave==0.3.0
 djangorestframework==3.12.1
 future==0.18.2
+google-currency==1.0.9
 gunicorn==20.0.4
 huepy==1.2.1
 idna==2.10
@@ -48,15 +50,18 @@ proglog==0.1.9
 psycopg2-binary==2.8.6
 py==1.9.0
 pycparser==2.20
+pycryptodome==3.10.1
 PyJWT==1.7.1
 pyparsing==2.4.7
 PySocks==1.7.1
 pytest==6.1.2
+python-dateutil==2.8.1
 python-decouple==3.3
 python-magic==0.4.18
 python-magic-bin==0.4.14
 python3-openid==3.2.0
 pytz==2020.1
+rave-python==1.2.10
 requests==2.24.0
 requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
